--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,11 +35,11 @@ jobs:
       - name: Build with Maven
         run: mvn -B -DskipTests package --file pom.xml
 
-      - name: Unit Tests
-        run: mvn -q test
+      # - name: Unit Tests
+      #   run: mvn -q test
 
-      - name: Integration Tests
-        run: mvn integration-test
+      # - name: Integration Tests
+      #   run: mvn integration-test
       
       - name: Login ghcr
         if: github.event_name != 'pull_request'
